app-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-deployment
  labels:
    app: crud-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crud
  template:
    metadata:
      labels:
        app: crud
    spec:
      containers:
      - name: crudcontainer
        image: macoratti/mvcfilmes:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
