deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deploy
  labels:
    app: apache-deploy
spec:
  selector:
    matchLabels:
      app: nginx1
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx1
    spec:
      containers:
      - name: nginx-container
        image: nginx
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
        volumeMounts:
          - name: meuvolume
            mountPath: "/app/meuvolume"
      volumes:
        - name: meuvolume
          emptyDir: {}
