pod1.yml
apiVersion: v1
kind: Pod
metadata:
  name: aspnet-pod
  labels:
    name: aspnet-app
spec:
  containers:
  - name: aspnet-container
    image: nginx
    ports:
      - containerPort: 80
        name: "frontend-mvc"
    volumeMounts:
      - mountPath: "/app/meuvolume"
        name: aspn-storage
  volumes:
    - name: aspn-storage
      persistentVolumeClaim:
        claimName: aspnet-pvc
