sqldeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
      - name: mssql
        image: mcr.microsoft.com/mssql/server:2019-latest
        ports:
        - containerPort: 1433
        volumeMounts:
          - name: mssqldb
            mountPath: /var/opt/mssql/data
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-pvc
