app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: crudapp-service
spec:
  selector:
    app: crud
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
