sql-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mssql-service
spec:
  selector:
    app: mssql
  type: NodePort
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
