frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  labels:
    name: frontend-ingress
spec:
  rules:
  - host: incrivel.local
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pizzafrontend
            port: 
              number: 8080
